<resources>
    <string name="app_name" translatable="false">TaxiRide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="authorization">Authorization</string>
    <string name="phone_number">Phone number</string>
    <string name="code">Code</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_via_email">Sign in via email</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_via_phone">Sign in via phone</string>
    <string name="sign_up">Sign up</string>
    <string name="order_a_taxi">Order a taxi</string>
    <string name="search">Search</string>
    <string name="comfort">Comfort</string>
    <string name="business">Business</string>
    <string name="cost">Cost</string>
    <string name="settings">Settings</string>
    <string name="personal_info">Personal info</string>
    <string name="payment_method">Payment method</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="add_new_card">Add new card</string>
    <string name="saved_addresses">Saved addresses</string>
    <string name="add_new_address">Add new address</string>
    <string name="add_card">Add card</string>
    <string name="card_number">Card Number</string>
    <string name="month_year">Month/Year</string>
    <string name="cvc" translatable="false">CVC</string>
    <string name="go_back">Go back</string>
    <string name="add_address">Add address</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="house">House</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="phone_number_verification">Phone number verification</string>
    <string name="request_code">Request the code</string>
    <string name="re_request_the_code">Re-request the code</string>
    <string name="enter_the_password">Enter the code</string>
    <string name="time_for_rerequest_code">Time for re-request code:</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="continue_text">Continue</string>
    <string name="economy">Economy</string>
    <string name="save">Save</string>
    <string name="less_than_16_digits">Less than 16 digits</string>
    <string name="less_than_4_digits">Less than 4 digits</string>
    <string name="less_than_3_digits">Less than 3 digits</string>
    <string name="incorrect_date">Incorrect date</string>
    <string name="required">Required</string>
    <string name="order_here">Order here</string>
    <string name="order_here_for_another_person">Order here for another person</string>
    <string name="order_from_here">Order from here</string>
    <string name="select_a_point">Select a point</string>
    <string name="start_address">Start address</string>
    <string name="final_address">Final address</string>
    <string name="saved_cards">Saved cards</string>
    <string name="city_street_house">City, street, house</string>
    <string name="choose_tariff">Choose tariff</string>
    <string name="choose_card">Choose card</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="points" translatable="false">&#8226;&#8226;&#8226;&#8226;</string>
    <string name="driver_search">Driver search</string>
    <string name="cancel_trip">Cancel trip</string>
    <string name="your_driver">Your driver</string>
    <string name="rating">Rating</string>
    <string name="trip">Trip</string>
    <string name="rate_a_trip">Rate a trip</string>
    <string name="thanks_for_the_feedback">Thanks for the feedback</string>
    <string name="expenses">Expenses</string>
    <string name="total_orders">Total orders:</string>
    <string name="tariff">Tariff</string>
    <string name="last_week">Last week</string>
    <string name="chat_with_driver">Chat with driver</string>
    <string name="you">You</string>
    <string name="driver">Driver</string>
    <string name="order_history">Order history</string>
    <string name="there_is_your_chat_with_driver">There\'s your chat with driver</string>
</resources>