<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/main_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_tariff"
        android:textAlignment="center"
        android:layout_marginVertical="12dp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btnEconom"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                style="@style/bordered_button_style"
                android:text="@string/economy"
                android:drawableTop="@drawable/taxi_icon_econom"
                android:maxLines="2" />
            <Button
                android:id="@+id/btnComfort"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                style="@style/bordered_button_style"
                android:text="@string/comfort"
                android:layout_marginHorizontal="24dp"
                android:drawableTop="@drawable/taxi_icon_econom"
                android:maxLines="2" />
            <Button
                android:id="@+id/btnBusiness"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                style="@style/bordered_button_style"
                android:text="@string/business"
                android:drawableTop="@drawable/taxi_icon_econom"
                android:maxLines="2"/>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        style="@style/main_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textAlignment="center"
        android:layout_marginBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:src="@drawable/cash_icon"
            android:layout_weight="6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/main_text_style"
            android:layout_weight="2"
            android:text="@string/cash"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbCash"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0.1"
            app:buttonTint="@color/accentColor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:src="@drawable/bank_card_icon"
            android:layout_weight="6"/>

        <TextView
            android:id="@+id/tvCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/main_text_style"
            android:layout_weight="2"
            android:text="@string/card"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"/>

        <RadioButton
            android:id="@+id/rbCard"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0.1"
            app:buttonTint="@color/accentColor"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnOrderTaxi"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        style="@style/main_button_style"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/order_a_taxi"/>

</LinearLayout>