<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.fragment.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/main_title_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:text="@string/personal_info" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:hint="@string/name"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/tvExpenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/main_text_style"
                android:text="@string/expenses"
                android:paddingVertical="6dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/main_title_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/saved_cards" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSavedCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="2"
                android:layout_marginVertical="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <LinearLayout
                android:id="@+id/addNewCardBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/add_card_icon" />

                <TextView
                    style="@style/main_title_style"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="32dp"
                    android:text="@string/add_new_card" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="12dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/accentColor" />

            <TextView
                style="@style/main_title_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/saved_addresses" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSavedAddresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <LinearLayout
                android:id="@+id/addNewAddressBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/add_card_icon" />

                <TextView
                    style="@style/main_title_style"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="32dp"
                    android:text="@string/add_new_address" />

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/main_button_style"
                android:layout_marginTop="16dp"
                app:cornerRadius="10dp"
                android:text="@string/save"/>
            <Button
                android:id="@+id/btnGoBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bordered_button_style"
                android:layout_marginTop="16dp"
                app:cornerRadius="10dp"
                android:text="@string/go_back"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>