<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.fragment.GeoInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            android:textAlignment="center"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            style="@style/main_text_style"
            android:textSize="18sp"/>

        <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            style="@style/main_button_style"
            app:cornerRadius="10dp"
            android:text="@string/order_here"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"/>

        <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            style="@style/bordered_button_style"
            app:cornerRadius="10dp"
            android:text="@string/order_from_here"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</FrameLayout>