<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.fragment.RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAaddAddressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/authorization"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/base_edittext_style"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:hint="@string/email"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/base_edittext_style"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:hint="@string/phone_number"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:hint="@string/name"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:hint="@string/password"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSigUp"
                style="@style/main_button_style"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:text="@string/sign_up"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/btnToAuthorization"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/authorization"
                app:cornerRadius="10dp"
                app:strokeColor="@color/accentColor"
                app:strokeWidth="2dp"
                style="@style/bordered_button_style" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>