<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.fragment.CodeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvVerifyPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/enter_the_password"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/base_edittext_style"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="96dp"
                android:hint="@string/code"
                app:endIconMode="clear_text">

                <com.santalu.maskara.widget.MaskEditText
                    android:id="@+id/etCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    app:mask="######"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRerequestCodeTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_for_rerequest_code"
                    />

                <Chronometer
                    android:id="@+id/chronometerReRequest"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:countDown="true"
                    android:layout_marginStart="16dp"/>

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:text="00:00"/>-->

            </androidx.appcompat.widget.LinearLayoutCompat>


            <Button
                android:id="@+id/btnSignIn"
                style="@style/main_button_style"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="96dp"
                android:text="@string/sign_up"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/btnReRequestCode"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/re_request_the_code"
                style="@style/bordered_button_style"
                app:strokeColor="@color/accentColor"
                app:strokeWidth="2dp"
                android:enabled="false"/>


        </LinearLayout>
    </ScrollView>

</FrameLayout>