<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.fragment.AddAddressFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddAddressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/add_address"
                android:textAlignment="center"
                style="@style/main_title_style" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCity"
                style="@style/base_edittext_style"
                app:endIconMode="clear_text"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:hint="@string/city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilStreet"
                style="@style/base_edittext_style"
                app:endIconMode="clear_text"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:hint="@string/street">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStreet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHouse"
                app:endIconMode="clear_text"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:hint="@string/house">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHouse"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddAddress"
                style="@style/main_button_style"
                app:cornerRadius="10dp"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:text="@string/add_address" />

            <Button
                android:id="@+id/btnGoBack"
                style="@style/bordered_button_style"
                app:cornerRadius="10dp"
                app:strokeColor="@color/accentColor"
                app:strokeWidth="2dp"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/go_back" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>